[tool.poetry]
name = "tdbinlog_reader"
version = "0.1.0"
description = ""
authors = ["lplpqq <69588388+lplpqq@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "tdbinlog_reader", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.14" #3.11
tgcrypto = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
